Fixed jumpy text bug

--- a/css/main.css
+++ b/css/main.css
@@ -1250,7 +1250,7 @@ a.navbar-brand {
 }
 
 #word-for-humanity p {
-     min-height: 60px;
+     min-height: 180px;
 }
 
 #humanity-carousel .carousel-indicators {
